--- a/scss/_megane.scss
+++ b/scss/_megane.scss
@@ -1,1 +1,49 @@
-// custom css
+// custom setting
+$body-font-color: #444;
+$body-font-family: 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS UI Gothic', 'Lucida Grande', sans-serif;
+
+// custom css-------------------
+
+//base
+h1, h2, h3, h4, h5, h6 {
+	color:$body-font-color;
+}
+.full{
+	width: 100%; 
+}
+.mb{
+	margin-bottom: 40px;
+}
+img.left{
+	margin-right: 10px;
+}
+img.right{
+	margin-left: 10px;
+}
+
+//layout
+.cover{
+	background-color: #444;
+	padding: 40px 0;
+	margin-bottom: 30px;
+	width: 100%;
+	overflow: hidden;
+	.title{
+		color: #fff;
+	}
+}
+.site-footer{
+	background-color: #333;
+	color: #fff;
+	padding: 20px 0;
+	margin-top: 50px;
+	.row{
+		margin-bottom: 0;
+	}
+	a{
+		color: #fff;
+		&:hover{
+			text-decoration: underline;
+		} 
+	}
+}
