--- a/scss/_megane.scss
+++ b/scss/_megane.scss
@@ -12,7 +12,10 @@ h1, h2, h3, h4, h5, h6 {
 	width: 100%; 
 }
 .mb{
-	margin-bottom: 40px;
+	margin-bottom: 50px;
+}
+.np{
+	padding: 0;
 }
 img.left{
 	margin-right: 10px;
@@ -23,9 +26,8 @@ img.right{
 
 //layout
 .cover{
-	background-color: #444;
+	background-color: #d9d9d9;
 	padding: 40px 0;
-	margin-bottom: 30px;
 	width: 100%;
 	overflow: hidden;
 	.title{
@@ -36,7 +38,6 @@ img.right{
 	background-color: #333;
 	color: #fff;
 	padding: 20px 0;
-	margin-top: 50px;
 	.row{
 		margin-bottom: 0;
 	}
@@ -45,5 +46,20 @@ img.right{
 		&:hover{
 			text-decoration: underline;
 		} 
+	}
+}
+
+.main-img{
+	padding: 200px 0;
+	background-color: #ffdd77;
+}
+.title{
+	text-align: center;
+	margin-bottom: 40px;
+}
+.panel.np {
+	p,h4{
+		padding: 10px 10px 0 10px;
+		margin: 0;
 	}
 }
