fix some Message

--- a/index.haml
+++ b/index.haml
@@ -32,7 +32,7 @@
 		.main-img.mb
 			.row
 				.large-12.columns
-					%h1 first Message
+					%h1 First Message
 					%h3 you know me
 		.row.mb
 			%h2.title Keep it Real
@@ -45,13 +45,13 @@
 		.cover.mb
 			.row
 				.large-12.columns
-					%h1 first Message
+					%h1 Second Message
 					%h3 you know me
 		.row
 			.large-6.columns.mb
 				%img(src="http://placehold.it/500x500/ccc/fff&text=Logo" alt="")
 			.large-6.columns
-				%h1 first Message
+				%h1 Third Message
 				%h3 you know me
 		.cover.nmb
 			.row
