add color setting

--- a/index.haml
+++ b/index.haml
@@ -49,7 +49,7 @@
 					%h3 you know me
 		.row
 			.large-6.columns.mb
-				%img(src="http://placehold.it/500x500/ccc/fff&text=Logo" alt="")
+				%img(src="http://placehold.it/500x500/e58254/fff&text=Logo" alt="")
 			.large-6.columns
 				%h1 Third Message
 				%h3 you know me
@@ -57,42 +57,42 @@
 			.row
 				.large-3.columns
 					.panel.np
-						%img(src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="")
+						%img(src="http://placehold.it/250x100/7fcc6d/fff&text=Logo" alt="")
 						%h4 aaaaaaa
 						%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						%img(src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="")
+						%img(src="http://placehold.it/250x100/62cc92/fff&text=Logo" alt="")
 						%h4 aaaaaaa
 						%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						%img(src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="")
+						%img(src="http://placehold.it/250x100/58c0cc/fff&text=Logo" alt="")
 						%h4 aaaaaaa
 						%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						%img(src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="")
+						%img(src="http://placehold.it/250x100/5391cc/fff&text=Logo" alt="")
 						%h4 aaaaaaa
 						%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						%img(src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="")
+						%img(src="http://placehold.it/250x100/817acc/fff&text=Logo" alt="")
 						%h4 aaaaaaa
 						%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						%img(src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="")
+						%img(src="http://placehold.it/250x100/cb8fcc/fff&text=Logo" alt="")
 						%h4 aaaaaaa
 						%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						%img(src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="")
+						%img(src="http://placehold.it/250x100/cc8073/fff&text=Logo" alt="")
 						%h4 aaaaaaa
 						%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						%img(src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="")
+						%img(src="http://placehold.it/250x100/cca262/fff&text=Logo" alt="")
 						%h4 aaaaaaa
 						%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 		.site-footer
