--- a/scss/_megane.scss
+++ b/scss/_megane.scss
@@ -26,7 +26,7 @@ img.right{
 
 //layout
 .cover{
-	background-color: #d9d9d9;
+	background-color: #fed7ee;
 	padding: 40px 0;
 	width: 100%;
 	overflow: hidden;
