--- a/index.haml
+++ b/index.haml
@@ -32,8 +32,8 @@
 		.main-img.mb
 			.row
 				.large-12.columns
-					%h1 First Message
-					%h3 you know me
+					%h1 FFFFirst Message
+					%h3 you know me me me me
 		.row.mb
 			%h2.title Keep it Real
 			.large-4.columns
