--- a/scss/_megane.scss
+++ b/scss/_megane.scss
@@ -26,7 +26,7 @@ img.right{
 
 //layout
 .cover{
-	background-color: #ecfebc;
+	background-color: #a099fe;
 	padding: 40px 0;
 	width: 100%;
 	overflow: hidden;
@@ -51,7 +51,7 @@ img.right{
 
 .main-img{
 	padding: 200px 0;
-	background-color: #ffdd77;
+	background-color: #ff77e4;
 }
 .title{
 	text-align: center;
