remove () from slim

--- a/index-slim.slim
+++ b/index-slim.slim
@@ -1,32 +1,31 @@
-html(class="no-js" lang="ja")
+html class="no-js" lang="ja"
 	head
-		meta(charset="utf-8")
-		meta(name="viewport" content="width=device-width, initial-scale=1.0")
+		meta charset="utf-8"
+		meta name="viewport" content="width=device-width, initial-scale=1.0"
 		title Foundaton Meganeset slim
-		link(rel="stylesheet" href="stylesheets/app.css")
-		script(src="bower_components/modernizr/modernizr.js")
+		link rel="stylesheet" href="stylesheets/app.css"
+		script src="bower_components/modernizr/modernizr.js"
 	body
 		.contain-to-grid.fixed
-			nav.top-bar(data-topbar)
+			nav.top-bar
 				ul.title-area
 					li.name
 						h1
-							a(href="#")
-								Megane
+							a href="#" Megane
 					li.toggle-topbar.menu-icon
-						a(href="")
+						a href=""
 							span Menu
 				section.top-bar-section
 					ul.right
 						li
-							a(href="#")
+							a href="#"
 								Right Nav Button Active
 						li.has-dropdown
-							a(href="#")
+							a href="#"
 								Right Button with Dropdown
 							ul.dropdown
 								li
-									a(href="#")
+									a href="#"
 										First link in dropdown
 		.main-img.mb
 			.row
@@ -48,7 +47,7 @@ html(class="no-js" lang="ja")
 					h3 you know me
 		.row
 			.large-6.columns.mb
-				img(src="http://placehold.it/500x500/e58254/fff&text=Logo" alt="")
+				img src="http://placehold.it/500x500/e58254/fff&text=Logo" alt=""
 			.large-6.columns
 				h1 Third Message
 				h3 you know me
@@ -56,48 +55,48 @@ html(class="no-js" lang="ja")
 			.row
 				.large-3.columns
 					.panel.np
-						img(src="http://placehold.it/250x100/7fcc6d/fff&text=Logo" alt="")
+						img src="http://placehold.it/250x100/7fcc6d/fff&text=Logo" alt="" 
 						h4 aaaaaaa
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						img(src="http://placehold.it/250x100/62cc92/fff&text=Logo" alt="")
+						img src="http://placehold.it/250x100/62cc92/fff&text=Logo" alt=""
 						h4 aaaaaaa
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						img(src="http://placehold.it/250x100/58c0cc/fff&text=Logo" alt="")
+						img src="http://placehold.it/250x100/58c0cc/fff&text=Logo" alt=""
 						h4 aaaaaaa
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						img(src="http://placehold.it/250x100/5391cc/fff&text=Logo" alt="")
+						img src="http://placehold.it/250x100/5391cc/fff&text=Logo" alt=""
 						h4 aaaaaaa
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						img(src="http://placehold.it/250x100/817acc/fff&text=Logo" alt="")
+						img src="http://placehold.it/250x100/817acc/fff&text=Logo" alt=""
 						h4 aaaaaaa
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						img(src="http://placehold.it/250x100/cb8fcc/fff&text=Logo" alt="")
+						img src="http://placehold.it/250x100/cb8fcc/fff&text=Logo" alt=""
 						h4 aaaaaaa
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						img(src="http://placehold.it/250x100/cc8073/fff&text=Logo" alt="")
+						img src="http://placehold.it/250x100/cc8073/fff&text=Logo" alt=""
 						h4 aaaaaaa
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 				.large-3.columns
 					.panel.np
-						img(src="http://placehold.it/250x100/cca262/fff&text=Logo" alt="")
+						img src="http://placehold.it/250x100/cca262/fff&text=Logo" alt=""
 						h4 aaaaaaa
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi
 		.site-footer
 			.row
 				.large-12.columns.text-center
 					p copyright
-		script(src="bower_components/jquery/jquery.js")
-		script(src="bower_components/foundation/js/foundation.min.js")
-		script(src="js/app.js")
+		script src="bower_components/jquery/jquery.js"
+		script src="bower_components/foundation/js/foundation.min.js"
+		script src="js/app.js"
