--- a/index-slim.slim
+++ b/index-slim.slim
@@ -7,11 +7,11 @@ html class="no-js" lang="ja"
 		script src="bower_components/modernizr/modernizr.js"
 	body
 		.contain-to-grid.fixed
-			nav.top-bar
+			nav.top-bar data-topbar=""
 				ul.title-area
 					li.name
 						h1
-							a href="#" Megane
+							a href="#" Meganee
 					li.toggle-topbar.menu-icon
 						a href=""
 							span Menu
